Scroll bar fix
Scroll bars on the google charts should be gone now
Note: I had to hide the scroll bar so technically they are still there just hidden behind.

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -11,10 +11,11 @@
 .visualizations {
     border-radius: 8px;
     border-style: solid;
-    width :100%
+    overflow: hidden;
     overflow-y: hidden;
     overflow-x: hidden;
-	
+    height: 275px;
+    width: 700px;
 }
 svg > g > g:last-child {
 
@@ -26,10 +27,10 @@ pointer-events: none
     border-radius: 8px;
     background: white;
     border-style: solid;
-    height: 300px;
+    height: 100%;
     overflow: hidden;
 }
 
-.transactionList, .categoryList {
+.transactionList, .categoryList { 
     height: 80%;
 }
